Rework the jekyll stuff to reflect the design changes. Removed all css. Use css-less in the future

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,14 @@
 name: Croggle
 markdown: redcarpet
-pygments: true
+highlighter: pygments
 github: [Repository metadata]
 paginate: 5
+gems: ['jekyll-less']
+
+defaults:
+  -
+    scope:
+      path: ""
+      type: "post"
+    values:
+      layout: "post"
